@@ -133,6 +133,8 @@ MIN_LENGTHKey = Min. length
 
 SharkStringVariableKey=Shark string variable
 SharkStringVariablesKey=Shark string variables
+SharkStringVariablesLabel=Shark string variables
+SharkStringVariablesTooltip=Shark string variables
 
 InsertSystemVariableKey=Insert system variable
 InsertConfigStringVariableKey=Insert configuration string variable
