@@ -125,6 +125,8 @@
 
 #Missing translation -> SharkStringVariableKey=Shark string variable 
 #Missing translation -> SharkStringVariablesKey=Shark string variables
+#Missing translation -> SharkStringVariablesLabel=Shark string variables
+#Missing translation -> SharkStringVariablesTooltip=Shark string variables
 
 #Missing translation -> InsertSystemVariableKey=Insert system variable
 #Missing translation -> InsertConfigStringVariableKey=Insert configuration string variable
