@@ -124,8 +124,10 @@ DYNAMICSCRIPTKey = Dinami\u010Dki skript
 IS_MANDATORYKey = Obavezno
 MIN_LENGTHKey = Minimalna du\u017Eina
 
-SharkStringVariableKey=Shark string varijable 
-SharkStringVariablesKey=Shark string varijabla
+SharkStringVariableKey=Shark string varijabla
+SharkStringVariablesKey=Shark string varijable
+SharkStringVariablesLabel=Shark string varijable
+SharkStringVariablesTooltip=Shark string varijable
 
 InsertSystemVariableKey=Umetni sistemsku varijablu
 InsertConfigStringVariableKey=Umetni konfiguracionu varijablu
