@@ -1,0 +1,97 @@
+# Together Workflow Editor 
+# Copyright (C) 2011 Together Teamsolutions Co., Ltd.
+# 
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or 
+# (at your option) any later version.
+# 
+# This program is distributed in the hope that it will be useful, 
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program. If not, see http://www.gnu.org/licenses
+#
+#######################################################################
+
+#
+# jawe controller configuration
+#
+
+############################# MAIN  #######################################
+# true false
+#AllowInvalidPackageSaving = true
+#AskOnDeletion = false
+#AskOnDeletionOfReferencedElements = true
+#DesignTimeValidation=true
+#InitialXPDLValidation=true
+#StartMaximized = true
+#ShowTooltip = true
+
+# if less than zero, it means unlimited
+#UndoHistorySize=-1
+
+# text
+#Encoding = UTF-8
+#DoNotAskOnDeletionOfReferencedElementTypes = Activity Transition
+
+######################## JAWE VIEW CONFIGURATION ##############################
+############# FRAME
+#  *******************
+#  * special *                *
+#  * * * * *  *     main    *
+#  * tree      *               *
+#  *              ***********
+#  *             *  other      *
+#  *******************
+# V - vertical split; H - horizontal split
+#FrameSettings = V; special H tree; main H other
+#MainDividerLocation = 180
+#FirstSmallDividerLocation = 180
+#SecondSmallDividerLocation = 400
+
+############# Main Menu
+#MainMenu.ActionOrder = *File jawe_editmenu *Search *Package *Process *ExternalPackages *Settings *Help
+
+#SubMenu.Name.File = file
+#SubMenu.ActionOrder.File = NewPackage Open Reopen Close - Save SaveAs - @RecentFiles - Exit
+
+#SubMenu.Name.Search = search
+#SubMenu.ActionOrder.Search = Search References
+
+SubMenu.Name.Package = package
+SubMenu.ActionOrder.Package = PackageCheckValidity StartDesignTimeValidation StopDesignTimeValidation - PackageNewProcess - PackageNamespaces PackageProperties PackageProcesses PackageExternalPackages PackageAddExternalPackage PackageRemoveExternalPackage PackageTypeDeclarations PackageParticipants PackageApplications PackageWorkflowRelevantData PackageSharkStringVariables PackageReferredDocument
+
+SubMenu.Name.Process = process
+SubMenu.ActionOrder.Process = ProcessProperties ProcessParticipants ProcessApplications ProcessWorkflowRelevantData ProcessSharkStringVariables ProcessFormalParameters - ProcessActivitySetsOverview ProcessActivitiesOverview ProcessTransitionsOverview
+
+#SubMenu.Name.ExternalPackages = externalPackage
+#SubMenu.ActionOrder.ExternalPackages = ExternalParticipants ExternalProcesses ExternalApplications ExternalTypeDeclarations
+
+#SubMenu.Name.SettingsLangName = settings
+#SubMenu.ActionOrder.SettingsMenu = @LanguageSwitcher @Reconfigurator
+
+#SubMenu.Name.Help = help
+#SubMenu.ActionOrder.Help = HelpTutorial HelpManual HelpAbout
+
+############# Toolbars
+#Toolbar.ActionOrder.defaultToolbar = *filetoolbar jawe_edittoolbar *packagetoolbar *externaltoolbar *processtoolbar
+#Toolbar.ActionOrder.filetoolbar = NewPackage Open Reopen - Save SaveAs - Exit
+#Toolbar.ActionOrder.searchtoolbar = Search References
+Toolbar.ActionOrder.packagetoolbar = PackageCheckValidity StartDesignTimeValidation StopDesignTimeValidation - PackageNewProcess - PackageNamespaces PackageProperties PackageProcesses PackageExternalPackages PackageAddExternalPackage PackageRemoveExternalPackage PackageTypeDeclarations PackageParticipants PackageApplications PackageWorkflowRelevantData PackageSharkStringVariables
+Toolbar.ActionOrder.processtoolbar = ProcessProperties ProcessParticipants ProcessApplications ProcessWorkflowRelevantData ProcessSharkStringVariables ProcessFormalParameters
+#Toolbar.ActionOrder.externaltoolbar = ExternalParticipants ExternalProcesses ExternalApplications ExternalTypeDeclarations
+
+Action.Name.ProcessSharkStringVariables=SharkStringVariables
+Action.Class.ProcessSharkStringVariables=org.enhydra.jawe.shark.ProcessSharkStringVariables
+Action.Image.ProcessSharkStringVariables=org/enhydra/jawe/shark/images/processsharkstringvariables.gif
+
+Action.Name.PackageSharkStringVariables=SharkStringVariables
+Action.Class.PackageSharkStringVariables=org.enhydra.jawe.shark.PackageSharkStringVariables
+Action.Image.PackageSharkStringVariables=org/enhydra/jawe/shark/images/packagesharkstringvariables.gif
+
+###########################  ACTIONS  #####################################
+############# Default Actions
+#DefaultActions.Edit.ActionOrder = Undo Redo - Cut Copy Paste Delete - EditProperties
